Added a basis with a last and first method

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "name": "pepijno/sphream",
     "type": "library",
-    "require": {},
+    "require": {
+        "phpunit/phpunit": "^8.0"
+    },
     "autoload": {
         "psr-4": {
             "Sphream\\": "src/"
