--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "pepijno/sphream",
     "type": "library",
     "require": {
+        "phpunit/phpunit": "^6.5"
     },
     "autoload": {
         "psr-4": {
@@ -9,7 +10,9 @@
         }
     },
     "description": "A library for using functional style streams",
-    "require-dev": {
-        "phpunit/phpunit": "^8.0"
+    "config": {
+        "platform": {
+            "php": "7.0.25"
+        }
     }
 }
