--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "pepijno/sphream",
     "type": "library",
     "require": {
-        "phpunit/phpunit": "^6.5"
     },
     "autoload": {
         "psr-4": {
@@ -14,5 +13,8 @@
         "platform": {
             "php": "7.0.25"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.5"
     }
 }
