--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "pepijno/sphream",
     "type": "library",
     "require": {
+        "php": ">=7.0"
     },
     "autoload": {
         "psr-4": {
@@ -9,6 +10,15 @@
         }
     },
     "description": "A library for using functional style streams",
+    "keywords": ["php", "functional", "functional programming", "stream"],
+    "homepage": "https://github.com/pepijno/sphream",
+    "license": "AGPL-3.0-or-later",
+    "authors": [
+        {
+            "name": "Pepijn Overbeeke",
+            "email": "pepijn.overbeeke@gmail.com"
+        }
+    ],
     "config": {
         "platform": {
             "php": "7.0.25"
